@@ -27,43 +27,47 @@
 	<category label="32007">
     	<setting id="resetVolumeOnStartup" type="bool" label="32061" default="false"/>
 		<setting id="resetStartupVolumeValue" label="32062" visible="eq(-1,true)" type="slider" default="100" range="0,1,100" option="int" />
+    	<setting id="launchOnStartup" type="bool" label="32008" default="false"/>
 	</category>
 	<category label="32066">
-		<setting id="numberOfSchuleRules" label="32067" type="enum" values="0|1|2|3|4|5" default="0" />
+		<setting id="scheduleSource" type="enum" label="32027" lvalues="32028|32029|32030" default="0"/>
+		<setting id="scheduleFile" label="32031" subsetting="true" visible="eq(-1,2)" type="file" value=""/>
 
-    	<setting label="32068" type="lsep" visible="gt(-1,0)"/>
-		<setting id="rule1StartTime" visible="gt(-2,0)" subsetting="true" type="time" label="32064" default="00:00"/>
-		<setting id="rule1EndTime" visible="gt(-3,0)" subsetting="true" type="time" label="32065" default="23:59"/>
-		<setting id="rule1VideoFile" label="32051" subsetting="true" visible="gt(-4,0)" type="video" value=""/>
-		<setting id="rule1OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-5,0)" lvalues="32202|32204|32205|32206|32203" default="0"/>
-		<setting id="rule1OverlayFile" label="32200" subsetting="true" visible="gt(-6,0) + eq(-1,4)" type="image"/>
+		<setting id="numberOfSchuleRules" label="32067" visible="eq(-2,1)" type="enum" values="0|1|2|3|4|5" default="0" />
 
-    	<setting label="32069" type="lsep" visible="gt(-7,1)"/>
-		<setting id="rule2StartTime" visible="gt(-8,1)" subsetting="true" type="time" label="32064" default="00:00"/>
-		<setting id="rule2EndTime" visible="gt(-9,1)" subsetting="true" type="time" label="32065" default="23:59"/>
-		<setting id="rule2VideoFile" label="32051" subsetting="true" visible="gt(-10,1)" type="video" value=""/>
-		<setting id="rule2OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-11,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
-		<setting id="rule2OverlayFile" label="32200" subsetting="true" visible="gt(-12,1) + eq(-1,4)" type="image"/>
+    	<setting label="32068" type="lsep" visible="gt(-1,0) + eq(-3,1)"/>
+		<setting id="rule1StartTime" visible="gt(-2,0) + eq(-4,1)" subsetting="true" type="time" label="32064" default="00:00"/>
+		<setting id="rule1EndTime" visible="gt(-3,0) + eq(-5,1)" subsetting="true" type="time" label="32065" default="23:59"/>
+		<setting id="rule1VideoFile" label="32051" subsetting="true" visible="gt(-4,0) + eq(-6,1)" type="video" value=""/>
+		<setting id="rule1OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-5,0) + eq(-7,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
+		<setting id="rule1OverlayFile" label="32200" subsetting="true" visible="gt(-6,0) + eq(-1,4) + eq(-8,1)" type="image"/>
 
-    	<setting label="32070" type="lsep" visible="gt(-13,2)"/>
-		<setting id="rule3StartTime" visible="gt(-14,2)" subsetting="true" type="time" label="32064" default="00:00"/>
-		<setting id="rule3EndTime" visible="gt(-15,2)" subsetting="true" type="time" label="32065" default="23:59"/>
-		<setting id="rule3VideoFile" label="32051" subsetting="true" visible="gt(-16,2)" type="video" value=""/>
-		<setting id="rule3OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-17,2)" lvalues="32202|32204|32205|32206|32203" default="0"/>
-		<setting id="rule3OverlayFile" label="32200" subsetting="true" visible="gt(-18,2) + eq(-1,4)" type="image"/>
+    	<setting label="32069" type="lsep" visible="gt(-7,1) + eq(-9,1)"/>
+		<setting id="rule2StartTime" visible="gt(-8,1) + eq(-10,1)" subsetting="true" type="time" label="32064" default="00:00"/>
+		<setting id="rule2EndTime" visible="gt(-9,1) + eq(-11,1)" subsetting="true" type="time" label="32065" default="23:59"/>
+		<setting id="rule2VideoFile" label="32051" subsetting="true" visible="gt(-10,1) + eq(-12,1)" type="video" value=""/>
+		<setting id="rule2OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-11,1) + eq(-13,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
+		<setting id="rule2OverlayFile" label="32200" subsetting="true" visible="gt(-12,1) + eq(-1,4) + eq(-14,1)" type="image"/>
 
-    	<setting label="32071" type="lsep" visible="gt(-19,3)"/>
-		<setting id="rule4StartTime" visible="gt(-20,3)" subsetting="true" type="time" label="32064" default="00:00"/>
-		<setting id="rule4EndTime" visible="gt(-21,3)" subsetting="true" type="time" label="32065" default="23:59"/>
-		<setting id="rule4VideoFile" label="32051" subsetting="true" visible="gt(-22,3)" type="video" value=""/>
-		<setting id="rule4OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-23,3)" lvalues="32202|32204|32205|32206|32203" default="0"/>
-		<setting id="rule4OverlayFile" label="32200" subsetting="true" visible="gt(-24,3) + eq(-1,4)" type="image"/>
+    	<setting label="32070" type="lsep" visible="gt(-13,2) + eq(-15,1)"/>
+		<setting id="rule3StartTime" visible="gt(-14,2) + eq(-16,1)" subsetting="true" type="time" label="32064" default="00:00"/>
+		<setting id="rule3EndTime" visible="gt(-15,2) + eq(-17,1)" subsetting="true" type="time" label="32065" default="23:59"/>
+		<setting id="rule3VideoFile" label="32051" subsetting="true" visible="gt(-16,2) + eq(-18,1)" type="video" value=""/>
+		<setting id="rule3OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-17,2) + eq(-19,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
+		<setting id="rule3OverlayFile" label="32200" subsetting="true" visible="gt(-18,2) + eq(-1,4) + eq(-20,1)" type="image"/>
 
-    	<setting label="32072" type="lsep" visible="gt(-25,4)"/>
-		<setting id="rule5StartTime" visible="gt(-26,4)" subsetting="true" type="time" label="32064" default="00:00"/>
-		<setting id="rule5EndTime" visible="gt(-27,4)" subsetting="true" type="time" label="32065" default="23:59"/>
-		<setting id="rule5VideoFile" label="32051" subsetting="true" visible="gt(-28,4)" type="video" value=""/>
-		<setting id="rule5OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-29,4)" lvalues="32202|32204|32205|32206|32203" default="0"/>
-		<setting id="rule5OverlayFile" label="32200" subsetting="true" visible="gt(-30,4) + eq(-1,4)" type="image"/>
+    	<setting label="32071" type="lsep" visible="gt(-19,3) + eq(-21,1)"/>
+		<setting id="rule4StartTime" visible="gt(-20,3) + eq(-22,1)" subsetting="true" type="time" label="32064" default="00:00"/>
+		<setting id="rule4EndTime" visible="gt(-21,3) + eq(-23,1)" subsetting="true" type="time" label="32065" default="23:59"/>
+		<setting id="rule4VideoFile" label="32051" subsetting="true" visible="gt(-22,3) + eq(-24,1)" type="video" value=""/>
+		<setting id="rule4OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-23,3) + eq(-25,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
+		<setting id="rule4OverlayFile" label="32200" subsetting="true" visible="gt(-24,3) + eq(-1,4) + eq(-26,1)" type="image"/>
+
+    	<setting label="32072" type="lsep" visible="gt(-25,4) + eq(-27,1)"/>
+		<setting id="rule5StartTime" visible="gt(-26,4) + eq(-28,1)" subsetting="true" type="time" label="32064" default="00:00"/>
+		<setting id="rule5EndTime" visible="gt(-27,4) + eq(-29,1)" subsetting="true" type="time" label="32065" default="23:59"/>
+		<setting id="rule5VideoFile" label="32051" subsetting="true" visible="gt(-28,4) + eq(-30,1)" type="video" value=""/>
+		<setting id="rule5OverlayImage" subsetting="true" type="enum" label="32200" visible="gt(-29,4) + eq(-31,1)" lvalues="32202|32204|32205|32206|32203" default="0"/>
+		<setting id="rule5OverlayFile" label="32200" subsetting="true" visible="gt(-30,4) + eq(-1,4) + eq(-32,1)" type="image"/>
 	</category>
 </settings>
